Fixed Onyx Biome