@@ -1,5 +1,5 @@
 plugins {
-	id 'fabric-loom' version '0.2.5-SNAPSHOT'
+	id 'fabric-loom' version '0.6-SNAPSHOT'
 	id "com.matthewprenger.cursegradle" version "1.4.0"
 	id 'maven-publish'
 }
@@ -14,19 +14,28 @@ group = project.maven_group
 minecraft {
 }
 
+
 dependencies {
-	//to change the versions see the gradle.properties file
-	minecraft "com.mojang:minecraft:${project.minecraft_version}"
-	mappings "net.fabricmc:yarn:${project.yarn_mappings}"
-	modCompile "net.fabricmc:fabric-loader:${project.loader_version}"
+	minecraft "com.mojang:minecraft:1.16.5"
+	mappings "net.fabricmc:yarn:1.16.5+build.5:v2"
+	modImplementation "net.fabricmc:fabric-loader:0.11.2"
 
-	// Fabric API. This is technically optional, but you probably want it anyway.
-	modCompile "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
-
-	//modImplementation 'com.github.javachaos:modproperties:release1'
-	// PSA: Some older mods, compiled on Loom 0.2.1, might have outdated Maven POMs.
-	// You may need to force-disable transitiveness on them.
+	//Fabric api
+	modImplementation "net.fabricmc.fabric-api:fabric-api:0.31.0+1.16"
 }
+//dependencies {
+//	//to change the versions see the gradle.properties file
+//	minecraft "com.mojang:minecraft:${project.minecraft_version}"
+//	mappings "net.fabricmc:yarn:${project.yarn_mappings}"
+//	modCompile "net.fabricmc:fabric-loader:${project.loader_version}"
+//
+//	// Fabric API. This is technically optional, but you probably want it anyway.
+//	modCompile "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
+//
+//	//modImplementation 'com.github.javachaos:modproperties:release1'
+//	// PSA: Some older mods, compiled on Loom 0.2.1, might have outdated Maven POMs.
+//	// You may need to force-disable transitiveness on them.
+//}
 
 processResources {
 	inputs.property "version", project.version
