@@ -3,16 +3,16 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 	# check these on https://fabricmc.net/use
-	minecraft_version=1.14.4
-	yarn_mappings=1.14.4+build.12
-	loader_version=0.6.1+build.165
+	minecraft_version=1.16.5
+	yarn_mappings=1.16.5+build.5
+	loader_version=0.11.2
 
 # Mod Properties
-	mod_version = 1.0.0
+	mod_version = 1.1.0
 	maven_group = net.ethermod
 	archives_base_name = blackether
 
 # Dependencies
 	# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
-	fabric_version=0.3.2+build.218-1.14
+    fabric_version=0.31.0+1.16
     curseForgeApiKey=2a49ac63-2ec7-4490-8eee-bf05ae9118b6
