@@ -1,0 +1,18 @@
+package net.ethermod.blackether.blocks;
+
+import net.fabricmc.api.EnvType;
+import net.fabricmc.api.Environment;
+import net.minecraft.block.Block;
+//import net.minecraft.block.BlockRenderLayer;
+
+public class BlockOfEther extends Block {
+
+    public BlockOfEther(Settings s) {
+        super(s);
+    }
+
+//    @Environment(EnvType.CLIENT)
+//    public BlockRenderLayer getRenderLayer() {
+//        return BlockRenderLayer.SOLID;
+//    }
+}
